--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -27,9 +27,9 @@ INPUT_DEVICES="libinput synaptics"
 USE="
 	-systemd -gnome -xfce -kde -bluetooth -sftp -perl -ruby -minimal \
 	-debug -gtk-doc -audit -gnome-keyring -test -handbook -doc -nls \
-	-vlc -upnp -cups -joystick -screencast -nvenc \
-	elogind X dbus udev acl alsa pulseaudio ffmpeg \
-	vulkan opengl vaapi fonts unicode ipv6 gpm acl webp \
+	-vlc -upnp -cups -joystick -nvenc \
+	elogind X dbus udev acl alsa pulseaudio ffmpeg v4l \
+	vulkan opengl vaapi fonts unicode ipv6 gpm acl webp screencast \
 	hardened asm seccomp verify-sig \
 	default-stack-clash-protection apparmor dri
 "
