--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -7,3 +7,5 @@ use-damage = false;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 unredir-if-possible = true;
+refresh-rate = 60;
+dbe = true;
