--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -26,7 +26,7 @@ INPUT_DEVICES="libinput synaptics"
 
 USE="
 	-systemd -gnome -xfce -kde -bluetooth -sftp -perl -ruby -minimal \
-	-debug -gtk-doc -audit -gnome-keyring -test -handbook -doc -nls \
+	-debug -gtk-doc -audit gnome-keyring -test -handbook -doc -nls \
 	-vlc -upnp -cups -joystick -nvenc \
 	elogind X dbus udev acl alsa pulseaudio ffmpeg v4l \
 	vulkan opengl vaapi fonts unicode ipv6 gpm acl webp screencast \
