--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -27,10 +27,10 @@ INPUT_DEVICES="libinput synaptics"
 USE="
 	-systemd -gnome -xfce -kde -bluetooth -sftp -perl -ruby -minimal \
 	-debug -gtk-doc -audit gnome-keyring -test -handbook -doc -nls \
-	-vlc -upnp -cups -joystick -nvenc \
+	-vlc -upnp -cups -joystick -nvenc -webkit \
 	elogind X dbus udev acl alsa pulseaudio ffmpeg v4l \
 	vulkan opengl vaapi fonts unicode ipv6 gpm acl webp screencast \
-	hardened asm seccomp verify-sig \
+	hardened asm seccomp verify-sig iwd networkmanager \
 	default-stack-clash-protection apparmor dri
 "
 
