--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -14,3 +14,9 @@ sync-uri = https://github.com/gentoo-mirror/torbrowser.git
 location = /var/db/repos/himalayas
 sync-type = git
 sync-uri = https://github.com/gemtoo/himalayas.git
+
+[pypi]
+priority = -9000
+location = /var/db/repos/pypi
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/pypi.git
