--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -25,10 +25,10 @@ VIDEO_CARDS="intel"
 INPUT_DEVICES="libinput synaptics"
 
 USE="
-	-systemd -gnome -xfce -kde -bluetooth -sftp -perl -ruby -minimal \
+	-systemd -gnome -xfce -kde -sftp -perl -ruby -minimal \
 	-debug -gtk-doc -audit gnome-keyring -test -handbook -doc -nls \
 	-vlc -upnp -cups -joystick -nvenc -webkit -lvm \
-	elogind X dbus udev acl alsa pulseaudio ffmpeg v4l \
+	elogind X dbus udev acl alsa pulseaudio ffmpeg v4l bluetooth \
 	vulkan opengl vaapi fonts unicode ipv6 gpm acl webp screencast \
 	hardened asm seccomp verify-sig iwd networkmanager \
 	default-stack-clash-protection apparmor dri
