--- a/etc/portage/binrepos.conf/gentoobinhost.conf
+++ b/etc/portage/binrepos.conf/gentoobinhost.conf
@@ -4,4 +4,6 @@
 
 [gentoobinhost]
 priority = 1
-sync-uri = https://distfiles.gentoo.org/releases/amd64/binpackages/23.0/x86-64_hardened
+sync-uri = https://ftp.mgts.by/pub/calculate/grp/x86_64
+# Original repo
+#sync-uri = https://distfiles.gentoo.org/releases/amd64/binpackages/23.0/x86-64_hardened
